--- a/Assignment 1/Q2.1/Hello.dSYM/Contents/Resources/Relocations/aarch64/Hello.yml
+++ b/Assignment 1/Q2.1/Hello.dSYM/Contents/Resources/Relocations/aarch64/Hello.yml
@@ -1,6 +1,6 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     "/Users/joy/Documents/Documents - Joydeep’s MacBook Air/Cplusplus_Projects/Assignment 1/Source Code /Hello"
+binary-path:     "/Users/joy/Documents/Documents - Joydeep’s MacBook Air/Cplusplus_Projects/Assignment 1/Q2.1/Hello"
 relocations:
   - { offsetInCU: 0x2F3B, offset: 0x2F3B, size: 0x8, addend: 0x0, symName: __ZNSt3__124__put_character_sequenceB7v160006IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m, symObjAddr: 0x35C, symBinAddr: 0x1000032D8, symSize: 0x1EC }
   - { offsetInCU: 0x488B, offset: 0x488B, size: 0x8, addend: 0x0, symName: __ZNSt3__1lsB7v160006IcNS_11char_traitsIcEENS_9allocatorIcEEEERNS_13basic_ostreamIT_T0_EES9_RKNS_12basic_stringIS6_S7_T1_EE, symObjAddr: 0xC0, symBinAddr: 0x10000303C, symSize: 0x4C }
