--- a/Assignment 1/Q2.2/Q2.2) Part C/helloPart2.3.dSYM/Contents/Resources/Relocations/aarch64/helloPart2.3.yml
+++ b/Assignment 1/Q2.2/Q2.2) Part C/helloPart2.3.dSYM/Contents/Resources/Relocations/aarch64/helloPart2.3.yml
@@ -1,6 +1,6 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     "/Users/joy/Documents/Documents - Joydeep’s MacBook Air/Cplusplus_Assignments/Assignment 1/Q2.2/Q2.2) Part B/helloTwoPartTwo"
+binary-path:     "/Users/joy/Documents/Documents - Joydeep’s MacBook Air/Cplusplus_Assignments/Assignment 1/Q2.2/Q2.2) Part C/helloPart2.3"
 relocations:
   - { offsetInCU: 0x2F22, offset: 0x2F22, size: 0x8, addend: 0x0, symName: __ZNSt3__124__put_character_sequenceB7v160006IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m, symObjAddr: 0x14C, symBinAddr: 0x10000324C, symSize: 0x1EC }
   - { offsetInCU: 0x4872, offset: 0x4872, size: 0x8, addend: 0x0, symName: __ZNSt3__1lsB7v160006INS_11char_traitsIcEEEERNS_13basic_ostreamIcT_EES6_PKc, symObjAddr: 0x80, symBinAddr: 0x100003180, symSize: 0x48 }
